--- a/HTML/solicitacao.html
+++ b/HTML/solicitacao.html
@@ -21,6 +21,15 @@
 
         <p id="combodepto"></p>
 
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Justificativa</label>
+                    <textarea class="form-control" id="justificativa" rows="3"></textarea>
+                  </div>
+             </div>
+         </div>
+
 
         <div class="row">
            <div class="col-md-12">
@@ -28,6 +37,9 @@
                 <button onclick="salvarSolicitacao();" type="button" class="btn btn-success">
                         Salvar
                 </button>
+                <button onclick="window.location='colaborador.html'" type="button" class="btn btn-success">
+                    Voltar
+            </button>
             </div>
         </div>
 
