versao final apresentacao

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
     <script type="text/javascript" src="funcoes.js"></script>
-    <title>Projeto VLan Manager</title>
+    <title>PROJETO VLAN MANAGER</title>
 </head>
 <body>
-    <!-- exemplo comentario -->
-    <div class="container">
+     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h3 class="text-center">Vlan Manager</h3>
+                <h3 class="text-center">VLAN MANAGER</h3>
             </div>
         </div>
 
@@ -21,9 +20,9 @@
             <div class="col-12">
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
-                      <span class="input-group-text" id="addon-wrapping">Racf/Email</span>
+                      <span class="input-group-text" id="addon-wrapping">RACF ou EMAIL</span>
                     </div>
-                    <input id="txtEmail"  type="text" class="form-control" placeholder="Digite seu email" aria-label="Username" aria-describedby="addon-wrapping">
+                    <input id="txtEmail"  type="text" class="form-control" placeholder="Digite seu racf ou email" aria-label="Username" aria-describedby="addon-wrapping">
                   </div>
               </div>
         </div>
@@ -32,7 +31,7 @@
             <div class="col-12">
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
-                      <span class="input-group-text" id="addon-wrapping">Senha</span>
+                      <span class="input-group-text" id="addon-wrapping">SENHA</span>
                     </div>
                     <input id="txtSenha" type="password" class="form-control" placeholder="Digite sua senha" aria-label="Username" aria-describedby="addon-wrapping">
                   </div>
@@ -42,7 +41,9 @@
         <div class="row">
             <div class="col-12">
                 <div class="input-group flex-nowrap">
-                    <button onclick="login()" type="button" class="btn btn-primary btn-lg">Login</button>
+                    <button onclick="login()" type="button" class="btn btn-success">Login</button>
+               
+
               </div>
         </div>
 
