--- a/HTML/solicitacao.html
+++ b/HTML/solicitacao.html
@@ -32,7 +32,9 @@
 
 
         <div class="row">
-           <div class="col-md-12">
+            <div class="col-md-10">
+            </div>
+            <div class="col-md-2">
                      
                 <button onclick="salvarSolicitacao();" type="button" class="btn btn-success">
                         Salvar
